compiler/fir/analysis-tests/testData/resolve/references/referenceToField.kt
class A {
    konst x: Int = 1
        get() {
            ::<!UNSUPPORTED!>field<!>
            return field
        }
}
